--- a/mutliagent_agi.ipynb
+++ b/mutliagent_agi.ipynb
@@ -149,8 +149,8 @@
         "        os.environ[var] = getpass.getpass(f\"Please provide your {var}\")\n",
         "\n",
         "\n",
-        "_set_if_undefined(\"GROQ_API_KEY\") # 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\n",
-        "_set_if_undefined(\"TAVILY_API_KEY\") # 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"
+        "_set_if_undefined(\"GROQ_API_KEY\") # z\n",
+        "_set_if_undefined(\"TAVILY_API_KEY\") # T"
       ]
     },
     {
@@ -173,7 +173,7 @@
         }
       ],
       "source": [
-        "os.environ[\"Git_api\"] = getpass.getpass(\"Please provide your GROQ_API_KEY\") # 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"
+        "os.environ[\"Git_api\"] = getpass.getpass(\"Please provide your GROQ_API_KEY\") # "
       ]
     },
     {
